add non-code tasks to all 48 cutoff repos (N11/M11/W11 + modify existing)
All 48 cutoff repos now at 33 tasks. Each has:
- 3 new non-code-focused tasks (N11, M11, W11) grounded in actual
  config/CI/doc files from the clone
- 2-3 existing tasks modified to include non-code work alongside
  their code changes